Add property api mapper

--- a/src/DashboardBundle/Resources/views/Properties/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/index.html.twig
@@ -12,7 +12,7 @@
 			<h5> My Properties </h5>
 			<ul id='dropdown2' class='dropdown-content'>
 				<li><a href="{{ path('properties_design') }}">New</a></li>
-				<li><a href="#!">From Mls</a></li>
+				<li><a href="{{ path('properties_mls') }}">From MLS</a></li>
 			</ul>
 			<div class="btn-group right">
 				<a href="#!" class="waves-effect waves-dark btn btn-small dropdown-button" data-activates='dropdown2'><i class="mdi mdi-content-add left"></i>Add</a>
