--- a/src/DashboardBundle/Resources/views/Properties/design.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/design.html.twig
@@ -104,34 +104,34 @@
           <div class="content" style="padding-top: 5px;padding-bottom: 5px;">
             <div class="row" style="margin-top: 5px;">
               <div class="col m6">
-                <div class="input-field">
+                <div class="input-field" style="margin-top: 3px;">
                   <i class="mdi-editor-attach-money prefix"></i>
                   <input id="input_price" type="text" name="subject">
                   <label for="input_price" class="">Price</label>
                 </div>
-                <div class="input-field">
+                <div class="input-field" style="margin-top: 0px;">
                   <i class="mdi-action-open-with prefix"></i>
                   <input id="input_size" type="text" name="subject">
                   <label for="input_size" class="">Size</label>
                 </div>
-                <div class="input-field">
+                <div class="input-field" style="margin-top: 0px;">
                   <i class="mdi-action-invert-colors prefix"></i>
                   <input id="input_baths" type="text" name="subject">
                   <label for="input_baths" class="">Baths</label>
                 </div>
-                <div class="input-field">
+                <div class="input-field" style="margin-top: 0px;">
                   <i class="mdi-maps-hotel prefix"></i>
                   <input id="input_rooms" type="text" name="subject">
                   <label for="input_rooms" class="">Rooms</label>
                 </div>
-                <div class="input-field">
+                <div class="input-field" style="margin-top: 0px;">
                   <i class="mdi-maps-directions-car prefix"></i>
                   <input id="input_garages" type="text" name="subject">
                   <label for="input_garages" class="">Garages</label>
                 </div>
               </div>
               <div class="col m6">
-                <div class="input-field">
+                <div class="input-field" style="margin-top: 3px;">
                   <select class="select2">
                     <option value="AK">Apartament</option>
                     <option value="HI">Condo</option>
