--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
@@ -1,34 +1,62 @@
-<div class="row" id="image-gallery">
-  <div class="card-panel of-h">
-    <div class="row photoswipe-gallery isotope mt-0" data-pswp-uid="1" style="position: relative; height: 516px;">
-      <a class="col s12 m6 l3 item" href="{{ asset('bundles/dashboard/properties/1.jpg') }}" data-size="2880x1800"
-         data-med="{{ asset('bundles/dashboard/properties/3.jpg') }}" data-med-size="1440x900" data-author="John Doe"
-         style="position: absolute; left: 0px; top: 0px;">
-        <img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" alt="">
-        <figure>Magna tollit mei te</figure>
-      </a>
-      <a class="col s12 m6 l3 item" href="{{ asset('bundles/dashboard/properties/2.jpg') }}" data-size="2880x1800"
-         data-med="{{ asset('bundles/dashboard/properties/3.jpg') }}" data-med-size="1440x900" data-author="Felicia Castro"
-         style="position: absolute; left: 257px; top: 0px;">
-        <img src="{{ asset('bundles/dashboard/properties/2.jpg') }}"  alt="">
-        <figure>Ex graeco deserunt posidonium pri, mei oblique bonorum recusabo te. Id mea diceret constituto, numquam
-          persequeris per te. Eam no veri verear quaerendum, eam graecis adolescens dissentiunt eu, summo quaeque
-          corpora ex eam. Libris molestiae an vix.
-        </figure>
-      </a>
-      <a class="col s12 m6 l3 item" href="{{ asset('bundles/dashboard/properties/1.jpg') }}" data-size="2880x1800"
-         data-med="{{ asset('bundles/dashboard/properties/3.jpg') }}" data-med-size="1440x900" data-author="Max Brooks"
-         style="position: absolute; left: 515px; top: 0px;">
-        <img src="{{ asset('bundles/dashboard/properties/3.jpg') }}" alt="">
-        <figure>Pri quem blandit intellegebat</figure>
-      </a>
-      <a class="col s12 m6 l3 item" href="{{ asset('bundles/dashboard/properties/4.jpg') }}" data-size="2880x1800"
-         data-med="{{ asset('bundles/dashboard/properties/3.jpg') }}" data-med-size="1440x900" data-author="Patsy Griffin"
-         style="position: absolute; left: 773px; top: 0px;">
-        <img src="{{ asset('bundles/dashboard/properties/4.jpg') }}"
-             alt="">
-        <figure>Vim ut eirmod minimum placerat</figure>
-      </a>
+<div class="row">
+  <div class="col m12">
+    <div class="card">
+      <div class="title">
+        <h5> Images </h5>
+      </div>
+      <div class="content">
+        <div class="row">
+          <div class="col m12">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col m12">
+            <div class="row photoswipe-gallery isotope mt-0" data-pswp-uid="1" style="position: relative; height: 516px;">
+              <a class="col s12 m6 l3 item" href="{{ asset('bundles/dashboard/properties/1.jpg') }}" data-size="2880x1800"
+                 data-med="{{ asset('bundles/dashboard/properties/3.jpg') }}" data-med-size="1440x900" data-author="John Doe"
+                 style="position: absolute; left: 0px; top: 0px;">
+                <img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" alt="">
+                <figure>Magna tollit mei te</figure>
+              </a>
+              <a class="col s12 m6 l3 item" href="{{ asset('bundles/dashboard/properties/2.jpg') }}" data-size="2880x1800"
+                 data-med="{{ asset('bundles/dashboard/properties/3.jpg') }}" data-med-size="1440x900" data-author="Felicia Castro"
+                 style="position: absolute; left: 257px; top: 0px;">
+                <img src="{{ asset('bundles/dashboard/properties/2.jpg') }}"  alt="">
+                <figure>Ex graeco deserunt posidonium pri, mei oblique bonorum recusabo te. Id mea diceret constituto, numquam
+                  persequeris per te. Eam no veri verear quaerendum, eam graecis adolescens dissentiunt eu, summo quaeque
+                  corpora ex eam. Libris molestiae an vix.
+                </figure>
+              </a>
+              <a class="col s12 m6 l3 item" href="{{ asset('bundles/dashboard/properties/1.jpg') }}" data-size="2880x1800"
+                 data-med="{{ asset('bundles/dashboard/properties/3.jpg') }}" data-med-size="1440x900" data-author="Max Brooks"
+                 style="position: absolute; left: 515px; top: 0px;">
+                <img src="{{ asset('bundles/dashboard/properties/3.jpg') }}" alt="">
+                <figure>Pri quem blandit intellegebat</figure>
+              </a>
+              <a class="col s12 m6 l3 item" href="{{ asset('bundles/dashboard/properties/4.jpg') }}" data-size="2880x1800"
+                 data-med="{{ asset('bundles/dashboard/properties/3.jpg') }}" data-med-size="1440x900" data-author="Patsy Griffin"
+                 style="position: absolute; left: 773px; top: 0px;">
+                <img src="{{ asset('bundles/dashboard/properties/4.jpg') }}"
+                     alt="">
+                <figure>Vim ut eirmod minimum placerat</figure>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col m12">
+    <div class="card">
+      <div class="title">
+        <h5> Files </h5>
+      </div>
+      <div class="content">
+      </div>
     </div>
   </div>
 </div>
