--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -65,8 +65,11 @@
                   <option value="HI">House</option>
                   <option value="HI">Villa</option>
                 </select>
-              </div>
             </div>
+            <p style="margin-top: 35px;">
+              <input type="checkbox" id="checkbox4" class="filled-in" checked="checked" />
+              <label for="checkbox4">For rent</label>
+            </p>
           </div>
         </div>
       </div>
