--- a/src/DashboardBundle/Resources/views/Properties/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/index.html.twig
@@ -11,7 +11,7 @@
 		<div class="title">
 			<h5> My Properties </h5>
 			<ul id='dropdown2' class='dropdown-content'>
-				<li><a href="{{ path('properties_design') }}">New</a></li>
+				<li><a href="{{ path('properties_design') }}">Empty</a></li>
 				<li><a href="{{ path('properties_mls') }}">From MLS</a></li>
 			</ul>
 			<div class="btn-group right">
