--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -1,6 +1,6 @@
 <div class="row" id="main-info">
   <div class="col m12">
-    <form action="#!">
+    {{ form_start(property_form, {'action': path('properties_save'), 'method': 'POST', 'id':'property_form'}) }}
       <div class="card">
         <div class="title">
           <h5> Basic Information </h5>
@@ -8,19 +8,19 @@
             <a href="#!" class="waves-effect waves-dark btn btn-small">
               <i class="mdi mdi-navigation-chevron-left left"></i> Back
             </a>
-            <a href="#!" class="waves-effect waves-dark btn btn-small">
+            <button type="submit" id="btn-save" class="waves-effect waves-dark btn btn-small">
               <i class="mdi mdi-content-save left"></i> Save
-            </a>
+            </button>
           </div>
         </div>
         <div class="content" style="padding-top: 5px;padding-bottom: 5px;">
           <div class="input-field">
             {{ form_widget(property_form.name, {'attr': {'id': 'name'}}) }}
-            <label for="name" class="">Name</label>
+            <label for="name" class="">Property Name</label>
           </div>
           <div class="input-field">
             {{ form_widget(property_form.description, {'attr': {'id': 'description', 'class':'materialize-textarea'}}) }}
-            <label for="description">Description</label>
+            <label for="description">Property Description</label>
           </div>
         </div>
       </div>
@@ -31,6 +31,7 @@
         <div class="content" style="padding-top: 5px;padding-bottom: 5px;">
           <div class="row" style="margin-top: 5px;">
             <div class="col m6">
+              <br />
               <div class="input-field" style="margin-top: 0px;">
                 <i class="mdi-maps-hotel prefix"></i>
                 {{ form_widget(property_form.bedrooms, {'attr': {'id': 'bedrooms'}}) }}
@@ -46,6 +47,21 @@
                 {{ form_widget(property_form.parking_spaces, {'attr': {'id': 'parking_spaces'}}) }}
                 <label for="parking_spaces" class="">Parking</label>
               </div>
+              <div class="input-field" style="margin-top: 0px;">
+                <i class="mdi-action-open-with prefix"></i>
+                {{ form_widget(property_form.unit_size, {'attr': {'id': 'unit_size'}}) }}
+                <label for="unit_size" class="">Unit Size</label>
+              </div>
+              <div class="input-field" style="margin-top: 0px;">
+                <i class="mdi-action-open-with prefix"></i>
+                {{ form_widget(property_form.year_built, {'attr': {'id': 'year_built'}}) }}
+                <label for="year_built" class="">Year Built</label>
+              </div>
+              <div class="input-field" style="margin-top: 0px;">
+                {{ form_widget(property_form.for_rent, {'attr': {'id': 'for_rent', 'class':'filled-in'}}) }}
+                <label for="for_rent">Is it for rent?</label>
+              </div>
+              <br />
               <div class="input-field" style="margin-top: 3px;">
                 <i class="mdi-editor-attach-money prefix"></i>
                 {{ form_widget(property_form.list_price, {'attr': {'id': 'list_price'}}) }}
@@ -53,32 +69,20 @@
               </div>
               <div class="input-field" style="margin-top: 0px;">
                 <i class="mdi-action-open-with prefix"></i>
-                {{ form_widget(property_form.lotSize, {'attr': {'id': 'lotSize'}}) }}
-                <label for="lotSize" class="">Size</label>
+                {{ form_widget(property_form.lease_term, {'attr': {'id': 'lease_term'}}) }}
+                <label for="lease_term" class="">Lease Term</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
-                <i class="mdi-action-open-with prefix"></i>
-                {{ form_widget(property_form.yearBuilt, {'attr': {'id': 'yearBuilt'}}) }}
-                <label for="yearBuilt" class="">Year Built</label>
-              </div>
-              <div class="input-field" style="margin-top: 0px;">
-                <i class="mdi-action-open-with prefix"></i>
-                {{ form_widget(property_form.leaseTerm, {'attr': {'id': 'leaseTerm'}}) }}
-                <label for="leaseTerm" class="">Lease Term</label>
-              </div>
-              <p style="margin-top: 35px;">
-                <input type="checkbox" id="checkbox4" class="filled-in" checked="checked" />
-                <label for="checkbox4">For rent</label>
-              </p>
             </div>
             <div class="col m6">
+              <br />
               <div class="input-field" style="margin-top: 3px;">
-                <select class="select2">
-                  <option value="AK">Apartament</option>
-                  <option value="HI">Condo</option>
-                  <option value="HI">House</option>
-                  <option value="HI">Villa</option>
-                </select>
+                {{ form_widget(property_form.type)}}
+                {#<select class="select2">#}
+                  {#<option value="AK">Apartament</option>#}
+                  {#<option value="HI">Condo</option>#}
+                  {#<option value="HI">House</option>#}
+                  {#<option value="HI">Villa</option>#}
+                {#</select>#}
               </div>
               <br />
               <div class="input-field" style="margin-top: 0px;">
@@ -102,13 +106,37 @@
                 <label for="country" class="">Country</label>
               </div>
               <div class="input-field" style="margin-top: 0px;">
-                {{ form_widget(property_form.postalCode, {'attr': {'id': 'postalCode'}}) }}
-                <label for="postalCode" class="">Postal Code</label>
+                {{ form_widget(property_form.postal_code, {'attr': {'id': 'postal_code'}}) }}
+                <label for="postal_code" class="">Postal Code</label>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+        <div class="card">
+          <div class="title">
+            <h5> Amenities </h5>
+          </div>
+          <div class="content" style="padding-top: 5px;padding-bottom: 5px;">
+            <div class="input-field">
+              {{ form_widget(property_form.amenities, {'attr': {'id': 'amenities', 'class':'materialize-textarea'}}) }}
+              <label for="amenities">Amenities</label>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="title">
+            <h5> Features </h5>
+          </div>
+          <div class="content" style="padding-top: 5px;padding-bottom: 5px;">
+            <div class="input-field">
+              {{ form_widget(property_form.features, {'attr': {'id': 'features', 'class':'materialize-textarea'}}) }}
+              <label for="features">Features</label>
+            </div>
+          </div>
+        </div>
 
       <div class="card">
         <div class="title">
@@ -139,6 +167,16 @@
           </div>
         </div>
       </div>
-    </form>
+    {{ form_end(property_form) }}
   </div>
 </div>
+
+<script>
+  $(document).ready(function(){
+    $('#btn-save').click(function(){
+//      var property_form = $('form#property_form');
+//      console.log(property_form);
+//      property_form.submit();
+    });
+  });
+</script>
