--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
@@ -22,28 +22,28 @@
         </li>
         <li>
           <a href="{{path('dashboard_index')}}" class="waves-effect waves-blue">
-            <i class="ion ion-social-angular"></i> Dashboard
+            <i class="fa fa-home"></i> Dashboard
           </a>
         </li>
         <li>
           <a href="{{path('properties_index')}}" class="waves-effect waves-blue">
-            <i class="ion ion-social-angular"></i> My Properties
+            <i class="fa fa-building-o"></i> Properties
           </a>
         </li>
         <li>
           <a href="{{path('flyer_index')}}" class="waves-effect waves-blue"><i
-              class="fa fa-magic"></i> Flayer
+              class="fa fa-magic"></i> Flayers
           </a>
         </li>
         <li>
           <a href="{{path('template_index')}}" class="waves-effect waves-blue">
-            <i class="mdi mdi-av-web"></i> Template
+            <i class="mdi mdi-av-web"></i> Templates
             <span class="badge new">new</span>
           </a>
         </li>
         <li>
           <a href="#" class="waves-effect waves-blue"><i
-              class="fa fa-magic"></i> Contact
+              class="fa fa-users"></i> Contacts
           </a>
         </li>
 
