--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tabbar.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tabbar.html.twig
@@ -3,7 +3,7 @@
   <div class="col m12">
     <ul class="tabs z-depth-1" style="width: 100%;overflow-x: hidden;">
       <li class="tab col s3"><a class="active" href="#main-info"> Information</a></li>
-      <li class="tab col s3"><a href="#image-gallery" class=""> Gallery</a></li>
+      <li class="tab col s3"><a href="#image-gallery" class=""> Gallery & Files</a></li>
     </ul>
   </div>
 </div>
