--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -32,32 +32,32 @@
           <div class="row" style="margin-top: 5px;">
             <div class="col m6">
               <br />
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 <i class="mdi-maps-hotel prefix"></i>
                 {{ form_widget(property_form.bedrooms, {'attr': {'id': 'bedrooms'}}) }}
                 <label for="bedrooms" class="">Rooms</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 <i class="mdi-action-invert-colors prefix"></i>
                 {{ form_widget(property_form.bathrooms, {'attr': {'id': 'bathrooms'}}) }}
                 <label for="input_baths" class="">Baths</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 <i class="mdi-maps-directions-car prefix"></i>
                 {{ form_widget(property_form.parking_spaces, {'attr': {'id': 'parking_spaces'}}) }}
                 <label for="parking_spaces" class="">Parking</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 <i class="mdi-action-open-with prefix"></i>
                 {{ form_widget(property_form.unit_size, {'attr': {'id': 'unit_size'}}) }}
                 <label for="unit_size" class="">Unit Size</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 <i class="mdi-action-open-with prefix"></i>
                 {{ form_widget(property_form.year_built, {'attr': {'id': 'year_built'}}) }}
                 <label for="year_built" class="">Year Built</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 {{ form_widget(property_form.for_rent, {'attr': {'id': 'for_rent', 'class':'filled-in'}}) }}
                 <label for="for_rent">Is it for rent?</label>
               </div>
@@ -67,7 +67,7 @@
                 {{ form_widget(property_form.list_price, {'attr': {'id': 'list_price'}}) }}
                 <label for="list_price" class="">Price</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 <i class="mdi-action-open-with prefix"></i>
                 {{ form_widget(property_form.lease_term, {'attr': {'id': 'lease_term'}}) }}
                 <label for="lease_term" class="">Lease Term</label>
@@ -75,7 +75,7 @@
             </div>
             <div class="col m6">
               <br />
-              <div class="input-field" style="margin-top: 3px;">
+              <div class="input-field">
                 {{ form_widget(property_form.type)}}
                 {#<select class="select2">#}
                   {#<option value="AK">Apartament</option>#}
@@ -85,27 +85,27 @@
                 {#</select>#}
               </div>
               <br />
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 {{ form_widget(property_form.address, {'attr': {'id': 'address'}}) }}
                 <label for="address" class="">Address</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 {{ form_widget(property_form.unit, {'attr': {'id': 'unit'}}) }}
                 <label for="unit" class="">Unit</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 {{ form_widget(property_form.city, {'attr': {'id': 'city'}}) }}
                 <label for="city" class="">City</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 {{ form_widget(property_form.state, {'attr': {'id': 'state'}}) }}
                 <label for="state" class="">State</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 {{ form_widget(property_form.country, {'attr': {'id': 'country'}}) }}
                 <label for="country" class="">Country</label>
               </div>
-              <div class="input-field" style="margin-top: 0px;">
+              <div class="input-field">
                 {{ form_widget(property_form.postal_code, {'attr': {'id': 'postal_code'}}) }}
                 <label for="postal_code" class="">Postal Code</label>
               </div>
